# diskuv-ocaml-starter-ghmirror

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .ocamlformat  Makefile  README.md  dune  dune-project  dune-workspace  make.cmd  makeit.cmd  opam  starter.opam
.github/workflows/: github-actions-makeit-build-dev.yml  github-actions-makeit.yml  troubleshoot-example-ppx_sexp_conv.sh
.gitlab/ci/: windows-makeit.gitlab-ci.yml  windows.gitlab-ci.yml
buildconfig/dune/: .gitignore
buildconfig/dune/workspace/: 3-all-Debug.ocamlopt_flags.sexp  3-all-ReleaseCompatFuzz.ocamlopt_flags.sexp
lib/: dune  terminal_color.ml
test/: dune
