#    Copyright 2021 Diskuv, Inc.
#
#    Licensed under the Apache License, Version 2.0 (the "License");
#    you may not use this file except in compliance with the License.
#    You may obtain a copy of the License at
#
#        http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS,
#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#    See the License for the specific language governing permissions and
#    limitations under the License.

opam-version: "2.0"
name: "starter"
maintainer: "you@example.net"
authors: ["you@example.net"]
synopsis: "A starter application to demonstrate Diskuv OCaml"
homepage: ["https://github.com/diskuv/diskuv-ocaml-starter#readme"]
bug-reports: ["https://github.com/diskuv/diskuv-ocaml-starter/issues"]
